--- a/LogCollector/LogCollector/src/main/resources/application.properties
+++ b/LogCollector/LogCollector/src/main/resources/application.properties
@@ -1,1 +1,30 @@
-spring.application.name=LogCollector
+spring.application.name=jenkins-log-collector
+
+# Server Configuration
+server.port=8081
+server.servlet.context-path=/
+
+# PostgreSQL Database Configuration
+spring.datasource.url=jdbc:postgresql://localhost:5432/jenkins_log
+spring.datasource.username=postgres
+spring.datasource.password=root
+spring.datasource.driver-class-name=org.postgresql.Driver
+
+# JPA/Hibernate Configuration
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQL10Dialect
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+
+# Jenkins API Configuration (for calling Jenkins REST API)
+jenkins.url=http://localhost:8080
+jenkins.username=mouad
+jenkins.api-key=1137e011c1d1e4e46a7475fc1b516bbf4c
+
+# Webhook Security Token (for Jenkins to call your API)
+# This token must match the one in your Jenkinsfile
+webhook.secret-token=119b088237bb9828d10be9d85d1470fc49
+
+# Logging Configuration
+logging.level.root=INFO
+logging.level.com.jenkins.collector=DEBUG
