--- a/LogAnalyser/LogAnalyser/src/main/resources/application.properties
+++ b/LogAnalyser/LogAnalyser/src/main/resources/application.properties
@@ -13,7 +13,14 @@ spring.kafka.consumer.key-deserializer=org.apache.kafka.common.serialization.Str
 spring.kafka.consumer.value-deserializer=org.apache.kafka.common.serialization.StringDeserializer
 spring.kafka.topic.name=last_build
 spring.kafka.consumer.enable-auto-commit=true
+eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
 
+# S'inscrire et récupérer le registre
+eureka.client.register-with-eureka=true
+eureka.client.fetch-registry=true
+
+# Utiliser l'adresse IP pour l'instance
+eureka.instance.prefer-ip-address=true
 
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
