--- a/LogAnalyser/LogAnalyser/src/main/resources/application.properties
+++ b/LogAnalyser/LogAnalyser/src/main/resources/application.properties
@@ -2,7 +2,7 @@ spring.application.name=LogAnalyser
 
 spring.datasource.url=jdbc:postgresql://localhost:5432/analyzer_db
 spring.datasource.username=postgres
-spring.datasource.password=slilima
+spring.datasource.password=
 spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 server.port=8082
