--- a/LogCollector/LogCollector/src/main/resources/application.properties
+++ b/LogCollector/LogCollector/src/main/resources/application.properties
@@ -5,7 +5,7 @@ server.port=8081
 # PostgreSQL (Docker)
 spring.datasource.url=jdbc:postgresql://localhost:5432/jenkins_log
 spring.datasource.username=postgres
-spring.datasource.password=slilima
+spring.datasource.password=
 spring.jpa.hibernate.ddl-auto=create
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 
