--- a/LogAnalyser/LogAnalyser/src/main/resources/application.properties
+++ b/LogAnalyser/LogAnalyser/src/main/resources/application.properties
@@ -1,8 +1,13 @@
 spring.application.name=LogAnalyser
 
+
+
+
+eureka.instance.hostname=localhost
+
 spring.datasource.url=jdbc:postgresql://localhost:5432/analyzer_db
 spring.datasource.username=postgres
-spring.datasource.password=
+spring.datasource.password=root
 spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 server.port=8082
@@ -13,6 +18,7 @@ spring.kafka.consumer.key-deserializer=org.apache.kafka.common.serialization.Str
 spring.kafka.consumer.value-deserializer=org.apache.kafka.common.serialization.StringDeserializer
 spring.kafka.topic.name=last_build
 spring.kafka.consumer.enable-auto-commit=true
+
 eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
 
 # S'inscrire et récupérer le registre
