--- a/LogCollector/LogCollector/src/main/resources/application.properties
+++ b/LogCollector/LogCollector/src/main/resources/application.properties
@@ -2,20 +2,28 @@
 spring.application.name=jenkins-log-collector
 server.port=8081
 
+eureka.client.service-url.defaultZone=http://localhost:8761/eureka
+eureka.client.register-with-eureka=true
+eureka.client.fetch-registry=true
+eureka.instance.hostname=localhost
+eureka.instance.prefer-ip-address=true
+
+
+
 # PostgreSQL (Docker)
 spring.datasource.url=jdbc:postgresql://localhost:5432/jenkins_log
 spring.datasource.username=postgres
-spring.datasource.password=
-spring.jpa.hibernate.ddl-auto=create
+spring.datasource.password=root
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 
 # Jenkins (ta machine)
 jenkins.url=http://localhost:8080
-jenkins.username=
-jenkins.api-key=
+jenkins.username=hacarii
+jenkins.api-key=11ef8ab6e1cc40e1d901ab2bd19fe7a4e7
 
 # Webhook
-webhook.secret-token=test
+webhook.secret-token=11b43c9d5a3e123cc2bfa57cb6462fca85
 
 
 
@@ -32,6 +40,8 @@ logging.level.root=INFO
 logging.level.com.example.LogCollector=DEBUG
 
 spring.main.allow-bean-definition-overriding=true
+
+
 
 
 # Jackson Configuration
