--- a/api-gateway/api-gateway/src/main/resources/application.properties
+++ b/api-gateway/api-gateway/src/main/resources/application.properties
@@ -1,1 +1,43 @@
 spring.application.name=api-gateway
+server.port=8095
+# ===== Eureka Client =====
+eureka.client.service-url.defaultZone=http://localhost:8761/eureka
+eureka.client.register-with-eureka=true
+eureka.client.fetch-registry=true
+eureka.instance.hostname=localhost
+eureka.instance.prefer-ip-address=true
+
+# Limiter le nombre total de connexions ouvertes par le client HTTP Netty
+server.max-http-header-size=131072
+server.tomcat.max-http-header-size=131072
+
+
+# application.properties
+
+
+
+
+
+
+spring.cloud.gateway.routes[0].id=jenkins-log-collector
+spring.cloud.gateway.routes[0].uri=lb://jenkins-log-collector
+spring.cloud.gateway.routes[0].predicates[0]=Path=/api/jenkins-logs/**
+spring.cloud.gateway.routes[0].filters[0]=RemoveRequestHeader=Forwarded
+
+
+# ===== Spring Cloud Gateway Routes =====
+
+
+spring.cloud.gateway.routes[1].id=LogAnalyser
+spring.cloud.gateway.routes[1].uri=lb://LogAnalyser
+spring.cloud.gateway.routes[1].predicates[0]=Path=/api/**
+spring.cloud.gateway.routes[1].filters[0]=RemoveRequestHeader=Forwarded
+
+
+
+
+# ===== Actuator =====
+# Expose actuator endpoints (including gateway)
+management.endpoints.web.exposure.include=*
+management.endpoint.gateway.enabled=true
+management.endpoint.health.enabled=true
