--- a/LogCollector/LogCollector/pom.xml
+++ b/LogCollector/LogCollector/pom.xml
@@ -16,12 +16,30 @@
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>3.3.4</version>
+        <version>3.2.4</version>
     </parent>
 
     <properties>
         <java.version>17</java.version>
+
+        <!-- SPRING CLOUD VERSION compatible with Spring Boot 3.2.x -->
+        <spring-cloud.version>2023.0.3</spring-cloud.version>
     </properties>
+
+
+    <dependencyManagement>
+        <dependencies>
+            <dependency>
+                <groupId>org.springframework.cloud</groupId>
+                <artifactId>spring-cloud-dependencies</artifactId>
+                <version>2023.0.3</version>
+                <type>pom</type>
+                <scope>import</scope>
+            </dependency>
+        </dependencies>
+    </dependencyManagement>
+
+
 
     <dependencies>
         <!-- Spring Boot Web -->
@@ -56,6 +74,14 @@
             <artifactId>jackson-datatype-jsr310</artifactId>
         </dependency>
 
+
+
+
+
+
+
+
+
         <!-- Lombok pour réduire le boilerplate -->
         <dependency>
             <groupId>org.projectlombok</groupId>
@@ -71,20 +97,45 @@
         </dependency>
 
         <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-actuator</artifactId>
+        </dependency>
+
+
+
+        <dependency>
             <groupId>org.springframework.kafka</groupId>
             <artifactId>spring-kafka-test</artifactId>
             <version>3.2.3</version>
             <scope>test</scope>
         </dependency>
+
     </dependencies>
 
     <build>
         <plugins>
-            <!-- Plugin pour créer un jar exécutable Spring Boot -->
+
+            <!-- SPRING BOOT PLUGIN (WITHOUT VERSION) -->
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
             </plugin>
+
+            <!-- FIX FOR COMPILER BUG -->
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.11.0</version>
+                <configuration>
+                    <release>17</release>
+                </configuration>
+            </plugin>
+
         </plugins>
     </build>
 </project>
