--- a/eureka-server/eureka-server/src/main/resources/application.properties
+++ b/eureka-server/eureka-server/src/main/resources/application.properties
@@ -1,1 +1,9 @@
 spring.application.name=eureka-server
+server.port=8761
+eureka.instance.hostname=localhost
+eureka.client.register-with-eureka=false
+eureka.client.fetch-registry=false
+
+
+management.endpoints.web.exposure.include=*
+management.endpoint.health.show-details=always
